Fixed video and khan block overlap

--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,4 +1,4 @@
 .khan__book-pic{
   width: 608px;
-  height: 620px;
+  max-height: 620px;
 }
