--- a/blocks/khan/__container/khan__container.css
+++ b/blocks/khan/__container/khan__container.css
@@ -3,4 +3,8 @@
   display:flex;
   flex-direction: column;
   align-items:left;
+  overflow: hidden;
+  position:relative;
+  margin: -100px;
+  bottom: -125px;
 }
