--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -6,5 +6,4 @@
   background-color: #f2f2f2;
   padding-top:160px;
   position: relative;
-  top: -50px;
 }
