--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -4,8 +4,8 @@
   align-items: center;
   justify-content: center;
   position:relative;
-  top: -10px;
-  margin:0;
+  bottom: -50px;
+  margin-top: -60px;
   padding:0;
   z-index: 1;
 }
